feat: Enhance mappers to support updating existing questions and options in surveys